--- a/Practice.css
+++ b/Practice.css
@@ -12,6 +12,7 @@ p {
 
 p {
     text-align: center;
-    border: 1px solid black;
-    padding: 10px;
+    border: 2px solid black;
+    padding: 20px;
+    margin: 10px;
 }
